tests/spec/fail/func_param_type_mismatch.aja
fuc apply(cb: func, x: int) -> int:
    return cb(x)

print(apply(1, 2))
